[tool.poetry]
name = "dolly"
version = "0.1.0"
description = "Modified Databricks’ [Dolly](https:/"
authors = ["Angus Kung <angusthefrog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.13"
accelerate = ">=0.16.0,<1"
click = ">=8.0.4,<9"
datasets = ">=2.10.0,<3"
deepspeed = ">=0.9.0,<1"
transformers = {version = ">=4.28.1,<5", extras = ["torch"]}
langchain = ">=0.0.139"
torch = "1.13.1"
pytest-cov = "3.0.0"
pytest = "7.1.2"
torchvision = "0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
